# pyddscat

./: .gitignore  .gitlab-ci.yml  CHANGES.txt  Dockerfile  MANIFEST.in  Makefile  README.md  build.py  coverage.xml  ddscat.log_000  environment.yml  justfile  meson.build  meson.options  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
ddscat/: Makefile  gen_wrapper.py  meson.build
ddscat/doc/: ddscat.par
ddscat/doc/html/: UserGuide.aux  UserGuide.bbl  UserGuide.fls  UserGuide.html  UserGuide.idx  UserGuide.ilg  UserGuide.ind  UserGuide.tex  UserGuide.toc  _UserGuide.toc  custom.css  footer.html  justfile  navbar.html  template.html
ddscat/src/: DDPOSTPROCESS.f90  DDSCAT.f90  Makefile  checker.f  cpfiles.sh  ddcommon.f90  dielec.f90  direct_calc.f90  errmsg.f90  extend.f90  getfml.f90  meson.build  mpi_fake.f90  mpi_subs.f90  nearfield.f90  readnf.f90  reapar.f90  reashp.f90  target.f90  tarnas.f90  tarnsp.f90  taronion.f90  tarsell.f90  version.f90  writesca.f90
dev/: requirements.txt  update_header.py
doc/: Makefile  conf.py  doc.rst  index.rst  justfile  postprocess.py  requirements.txt  sg_execution_times.rst
doc/_static/css/: custom.css
doc/_templates/: landing-page.html
doc/api/: api.rst  core_api.rst  fileio_api.rst  ranges_api.rst  results_api.rst  targets_api.rst  utils_api.rst
doc/old_examples/: default.py  example1.py
doc/userguide/: config_ug.rst  jobs_ug.rst  settings_ug.rst  table_ug.rst  targets_ug.rst  userguide.rst
examples/: README.md  _plot_field.py  a1a2.pvd  a1a2_1.vtr  output.pvd  output_1.vtr  plot_custom_target.py  plot_fig6.py  plot_test.py
pyddscat/: __about__.py  __init__.py  calltarget  core.py  ddpostprocess  ddscat  fileio.py  meson.build  ranges.py  results.py  targets.py  utils.py  vtrconvert
pyddscat/profiles/: __init__.py  default.py  example_mpi.py  example_serial.py  meson.build
test/: dev.py  requirements.txt  test_basic.py  test_plot.py  test_simulation.py
