[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyddscat"
version = "0.0.1"
description = "Discrete Dipole Scattering"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = ["scattering", "electromagnetism", "optics"]
authors = [
    { email = "contact@phokaia.io" },
    { name = "The Phokaia Developers" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy >= 1.10.0",
    "matplotlib >= 3.7.0",
    "pyvista[jupyter] >= 0.39.0",
    "loguru",
]

[project.urls]
Homepage = "https://phokaia.gitlab.io/pyddscat"
Documentation = "https://phokaia.gitlab.io/pyddscat"
Repository = "https://gitlab.io/phokaia/pyddscat"
Issues = "https://gitlab.io/phokaia/pyddscat/issues"

[tool.setuptools.packages.find]
where = ["."]

# Install system library
[tool.cibuildwheel.linux]
before-all = ["yum install -y gcc-gfortran", "export FC=gfortran"]
