
[metadata]
name = pyddscat
version = 0.0.1
author = The Phokaia Developers
email = 
description = Discrete Dipole Scattering
url = https://gitlab.com/phokaia/pyddscat
project_urls =
    Code=https://gitlab.com/phokaia/pyddscat
    Documentation=https://phokaia.gitlab.io/doc/pyddscat
    Issues=https://gitlab.com/phokaia/pyddscat/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    scattering
    electromagnetism
    optics

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    matplotlib
    numpy
    scipy
    pyvista
    trame
    ipywidgets
    loguru


python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
